# util-dfm

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md
autotests/: CMakeLists.txt  README.md
autotests/dfm-burn-tests/: CMakeLists.txt  tst_dfm_burn.cpp
autotests/dfm-io-tests/: CMakeLists.txt  test_main.cpp  tst_dfilesorter.cpp  tst_dfm_io.cpp
autotests/dfm-mount-tests/: CMakeLists.txt  tst_dfm_mount.cpp
autotests/dfm-search-tests/: CMakeLists.txt  main.cpp  tst_chinese_nlp.cpp  tst_cli_options.cpp  tst_content_retriever.cpp  tst_content_search_engine.cpp  tst_dconfig_parsing.cpp  tst_dfm_search.cpp  tst_filename_search_engine.cpp  tst_recent_search_engine.cpp  tst_search_output.cpp  tst_search_utils.cpp  tst_semantic_search.cpp  tst_size_range_filter.cpp  tst_textsearch_api.cpp  tst_timerangefilter.cpp
src/: CMakeLists.txt
src/dfm-burn/: CMakeLists.txt  opticaldiscinfo.cpp
src/dfm-burn/dfm-burn-client/: CMakeLists.txt  README.md  burn_utils.cpp  burn_utils.h  cli_options.cpp  cli_options.h  main.cpp
src/dfm-burn/dfm-burn-lib/: CMakeLists.txt  dfm-burn-qt5.cmake  dfm-burn-qt6.cmake  dfm-burn.cmake  dfm-burn.pc.in  dopticaldiscinfo.cpp  dopticaldiscmanager.cpp  dpacketwritingcontroller.cpp  opticaldiscinfo.cpp  opticaldiscmanager.cpp
src/dfm-burn/dfm-burn-lib/include/: dburn_global.h  dfmburn_global.h  dopticaldiscinfo.h  dopticaldiscmanager.h  opticaldiscinfo.h  opticaldiscmanager.h
src/dfm-burn/dfm-burn-lib/private/: dopticaldiscinfo_p.h  dopticaldiscmanager_p.h  dpacketwritingcontroller_p.h  dsm3hash.cpp  dsm3hash.h  dudfburnengine.cpp  dudfburnengine.h  dvdrwformatengine.cpp  dvdrwformatengine.h  dxorrisoengine.cpp  dxorrisoengine.h  opticaldiscinfo_p.h  opticaldiscmanager_p.h  scsicommandhelper.cpp  scsicommandhelper.h  udfburnengine.cpp  udfburnengine.h  xorrisoengine.cpp  xorrisoengine.h
src/dfm-burn/include/: dfm_burn.h  dfm_burn_namespace.h  opticaldiscinfo.h
src/dfm-burn/private/: abstractopticaldiscengine.cpp  abstractopticaldiscengine_p.h  engine_factory.hpp  opticaldiscinfo_p.h  xorrisoengine.cpp  xorrisoengine_p.h
src/dfm-io/: CMakeLists.txt
src/dfm-io/dfm-io/: CMakeLists.txt  denumerator.cpp  denumeratorfuture.cpp  dfile.cpp  dfilefuture.cpp  dfileinfo.cpp  dfm-io-qt5.cmake  dfm-io-qt6.cmake  dfm-io.cmake  dfm-io.pc.in  dfmio_utils.cpp  doperator.cpp  dwatcher.cpp  trashhelper.cpp
src/dfm-io/dfm-io/include/: dfmio_global.h  dfmio_register.h  dfmio_utils.h
src/dfm-io/dfm-io/private/: denumerator_p.h  dfile_p.h  dfilefuture_p.h  dfileinfo_p.h  doperator_p.h  dwatcher_p.h
src/dfm-io/dfm-io/sort/: dfilesorter.cpp  dfilesorter.h  dsortkeycache.cpp  dsortkeycache.h
src/dfm-io/dfm-io/src/: dfmio_register.cpp  dfmio_utils.cpp
src/dfm-io/dfm-io/utils/: dlocalhelper.cpp  dlocalhelper.h  dmediainfo.cpp  dmediainfo.h  trashfilehelper.cpp  trashfilehelper.h
src/dfm-io/tools/: CMakeLists.txt  dfm-cat.cpp  dfm-copy-gio.cpp  dfm-copy-system.cpp  dfm-copy.cpp  dfm-copy2.cpp  dfm-copy3.cpp  dfm-copy4.cpp  dfm-delete.cpp  dfm-info.cpp  dfm-link.cpp  dfm-list.cpp  dfm-mkdir.cpp  dfm-move.cpp  dfm-rename.cpp  dfm-restore.cpp  dfm-save.cpp  dfm-sort-list.cpp  dfm-touch.cpp  dfm-trash.cpp  dfm-watcher.cpp
src/dfm-mount/: CMakeLists.txt  dfm-mount-qt5.cmake  dfm-mount-qt6.cmake  dfm-mount.cmake
src/dfm-mount/example/: main.cpp
src/dfm-mount/include/: dblockdevice.h  dblockmonitor.h  ddevicemanager.h  dfm-mount.h  dfmabstractdevice.h  dfmabstractmonitor.h  dfmblockdevice.h  dfmblockmonitor.h  dfmdeviceinterface.h  dfmdevicemanager.h  dfmmonitorinterface.h  dfmmount_global.h  dfmprotocoldevice.h  dfmprotocolmonitor.h  dmount.h  dprotocoldevice.h  dprotocolmonitor.h
src/dfm-mount/include/base/: ddevice.h  ddevicemonitor.h  dfmdevice.h  dfmmonitor.h  dfmmount_global.h  dfmmountdefines.h  dfmmountutils.h  dmount_global.h  dmountutils.h
src/dfm-mount/lib/: dblockdevice.cpp  dblockmonitor.cpp  ddevicemanager.cpp  dfm-mount.pc.in  dfmabstractdevice.cpp  dfmabstractmonitor.cpp  dfmblockdevice.cpp  dfmblockmonitor.cpp  dfmdevicemanager.cpp  dfmmountmanager.cpp  dfmprotocoldevice.cpp  dfmprotocolmonitor.cpp  dprotocoldevice.cpp  dprotocolmonitor.cpp
src/dfm-mount/lib/base/: ddevice.cpp  ddevicemonitor.cpp  dfmdevice.cpp  dfmmonitor.cpp  dfmmountutils.cpp  dmountutils.cpp
src/dfm-mount/lib/private/: dfmblockdevice_p.h  dfmblockmonitor_p.h
src/dfm-mount/private/: dblockdevice_p.h  dblockmonitor_p.h  ddevice_p.h  ddevicemanager_p.h  ddevicemonitor_p.h  dfmblockdevice_p.h  dfmblockmonitor_p.h  dfmdevice_p.h  dfmdevicemanager_p.h  dfmmonitor_p.h  dfmprotocoldevice_p.h  dfmprotocolmonitor_p.h  dnetworkmounter.cpp  dnetworkmounter.h  dprotocoldevice_p.h  dprotocolmonitor_p.h
src/dfm-search/: CMakeLists.txt
src/dfm-search/dfm-search-client/: CMakeLists.txt  README.md  cli_options.cpp  cli_options.h  main.cpp  preview_command.cpp  preview_command.h  preview_output_utils.cpp  preview_output_utils.h  size_parser.cpp  size_parser.h  time_parser.cpp  time_parser.h
src/dfm-search/dfm-search-client/output/: json_output.cpp  json_output.h  output_formatter.h  text_output.cpp  text_output.h
src/dfm-search/dfm-search-lib/: CMakeLists.txt  dfm-search-qt5.cmake  dfm-search-qt6.cmake  dfm-search.cmake
src/dfm-search/dfm-search-lib/contentsearch/: contentsearchapi.cpp  contentsearchengine.cpp  contentsearchengine.h
src/dfm-search/dfm-search-lib/core/: abstractsearchengine.cpp  abstractsearchengine.h  genericsearchengine.cpp  genericsearchengine.h  searchengine.cpp  searcherror.cpp  searchfactory.cpp  searchoptions.cpp  searchoptionsdata.h  searchquery.cpp  searchresult.cpp  searchresultdata.h  sizerangefilter.cpp  timerangefilter.cpp  timeresultapi.cpp
src/dfm-search/dfm-search-lib/filenamesearch/: filenamesearchapi.cpp  filenamesearchengine.cpp  filenamesearchengine.h
src/dfm-search/dfm-search-lib/utils/: indexmutex.h  (+24 more)
tests/: CMakeLists.txt  all-ut-prj-running.sh  cppcheck-prj-running.sh  test-prj-running.sh  ut-target-running.sh
tests/dfm-burn/: CMakeLists.txt  ut_opticaldiscinfo.cpp
tests/dfm-io/: CMakeLists.txt  main.cpp  ut_denumerator.cpp
(+267 files in other folders)
